--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Show event data
       run: |
         echo "Event: $(echo '${{ toJson(github.event) }}')"
-        echo "Compare: "${{ github.event.compare }}"
+        echo "Compare: ${{ github.event.compare }}"
         echo "Commits: $(echo '${{ toJson(github.event.commits) }}')"
     
     - name: Get list of changed files
