--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,9 @@ jobs:
         echo "Event: ${{ toJson(github.event) }}"
         echo "Compare: ${{ github.event.compare }}"
         for commit in ${{ github.event.commits }}; do
-            echo "Commit: toJson($commit)"
+            echo "Commit:${{ toJson($commit) }} "
             for file in $commit.modified; do
-                echo "File: $file"
+                echo "File: ${{ toJSON($file) }}"
             done
         done
     
