Added check for github.base_ref

--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -21,7 +21,7 @@ jobs:
           echo "ENV_REF: $GITHUB_REF"
           echo "GITHUB_REF 1: ${{ github.ref }}"
           echo "GITHUB_REF_NAME: ${{ github.ref_name }}"
-          echo" GITHUB_BASE_REF: ${{ github.base_ref }}"
+            ${{ if github.base_ref }}echo "GITHUB_BASE_REF: ${{ github.base_ref }}"${{ else }}echo "Does not exist"${{ endif }}
       - name: Prepare the host matrix
         id: set-matrix
         env:
