Echo github obj

--- a/.github/workflows/workflow_run.yml
+++ b/.github/workflows/workflow_run.yml
@@ -12,5 +12,4 @@ jobs:
       - name: Test
         run: |
             echo "Hello: ${{ github.event.inputs.test }}"
-            echo "Event: ${{ toJson(github.event) }}"
-            echo "Workflow: ${{ toJson(github.event.workflow_run) }}"
+            echo "github: ${{ toJson(github) }}"
