--- a/.github/workflows/workflow_run.yml
+++ b/.github/workflows/workflow_run.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Test
         run: |
             echo "Hello: ${{ github.event.inputs.test }}"
-            echo "github: ${{ toJson(github) }}"
+            echo "URL: ${{ github.event.repository.html_url }}/actions/runs/${{ github.run_id }}"
