--- a/.github/workflows/example-shipshape.yml
+++ b/.github/workflows/example-shipshape.yml
@@ -20,5 +20,5 @@ jobs:
       shipshape-version: 'v1.0.0-alpha.1.5.0'
       sdp-platform-rules-version: 'v1.0.3'
       table-output: 'config'
-      fail-severity: 'high'
+      fail-severity: 'normal'
     secrets: inherit  # This is needed to pass GITHUB_TOKEN to the called workflow 
