--- a/.github/workflows/example-shipshape.yml
+++ b/.github/workflows/example-shipshape.yml
@@ -18,7 +18,7 @@ jobs:
     with:
       # Optional parameters with defaults shown
       shipshape-version: 'v1.0.0-alpha.1.5.0'
-      sdp-platform-rules-version: 'v1.0.3'
-      table-output: 'config'
+      sdp-platform-rules-version: 'v1.0.1'
+      table-output: 'table'
       fail-severity: 'normal'
     secrets: inherit  # This is needed to pass GITHUB_TOKEN to the called workflow 
