--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -63,6 +63,8 @@ jobs:
         shell: bash
         run: |
           # Run shipshape
+          cat shipshape.yml
+          shipshape run . -f shipshape.yml
           shipshape run . -f shipshape.yml --error-code --output-format junit > shipshape-results.xml
       - name: Upload audit report
         uses: actions/upload-artifact@v4
