--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -65,10 +65,7 @@ jobs:
         shell: bash
         run: |
           # Run shipshape
-          ls -la
-          cat shipshape.yml
-          # shipshape run . -f shipshape.yml --debug --error-cod
-          shipshape run . -f shipshape.yml --error-code --output-format junit --debug > shipshape-results.xml
+          shipshape run . -f shipshape.yml --error-code --output-format junit > shipshape-results.xml
       - name: Upload audit report
         uses: actions/upload-artifact@v4
         if: always()
