--- a/.github/workflows/example-shipshape.yml
+++ b/.github/workflows/example-shipshape.yml
@@ -2,15 +2,14 @@ name: Example Shipshape Usage
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
-
+    branches: [main]
 
 jobs:
   run-shipshape:
     uses: ./.github/workflows/shipshape.yml
-    secrets: inherit  # This is needed to pass GITHUB_TOKEN to the called workflow
+    secrets: inherit # This is needed to pass GITHUB_TOKEN to the called workflow
     with:
       # Optional parameters with defaults shown
-      sdp-platform-rules-version: 'v1.0.2'
+      sdp-platform-rules-version: "v1.0.2"
