--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -79,4 +79,4 @@ jobs:
           fail_on_failure: false
           require_tests: false
           require_passed_tests: false
-          annotate_only: true
+          annotate_only: false
