--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -57,14 +57,7 @@ jobs:
         shell: bash
         run: |
           # Run shipshape
-          set +e  # Don't exit on error
-          shipshape run . -f shipshape.yml --error-code --output-format table --output-file shipshape-results.xml --output-file-format junit > shipshape-results.txt
-          EXIT_CODE=$?
-          
-          # If there are errors, show a warning
-          if [ $EXIT_CODE -ne 0 ]; then
-            echo "::warning::Shipshape audit found errors. Check the Junit Shipeshape Audit Report for details."
-          fi
+          shipshape run . -f shipshape.yml --output-format table --output-file shipshape-results.xml --output-file-format junit > shipshape-results.txt
       - name: Upload audit report
         uses: actions/upload-artifact@v4
         if: always()
