--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Install Github CLI
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install gh -y
       - name: Get Cached Shipshape Binary
         id: cache-shipshape
         uses: actions/cache@v4
