--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Github CLI
         run: |
-          apk add --update --no-cache gh
+          apk add github-cli
       - name: Get Cached Shipshape Binary
         id: cache-shipshape
         uses: actions/cache@v4
