--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -12,6 +12,7 @@ permissions:
 env:
   SHIPSHAPE_VERSION: v1.0.0-alpha.1.5.1
   SDP_PLATFORM_RULES_VERSION: v1.0.2
+  GH_TOKEN: ${{ github.token }}
 
 jobs:
   audit:
