--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -36,21 +36,21 @@ jobs:
           # Download shipshape binary
           curl -L "https://github.com/salsadigitalauorg/shipshape/releases/download/${{ env.SHIPSHAPE_VERSION }}/shipshape-$(uname -s)-$(uname -m)" -o /usr/local/bin/shipshape
           chmod +x /usr/local/bin/shipshape
-      - name: Get Cached SDP Platform Rules
-        id: cache-sdp-rules
-        uses: actions/cache@v4
-        with:
-          path: shipshape.yml
-          key: sdp-platform-rules-${{ env.SDP_PLATFORM_RULES_VERSION }}
-          restore-keys: |
-            sdp-platform-rules-
-      - name: Download SDP Platform Rules if not cached
-        if: steps.cache-sdp-rules.outputs.cache-hit != 'true'
-        run: |
-            curl -s -H "Authorization: token ${{ github.token }}" \
-            -H "Accept: application/vnd.github.raw" \
-            "https://api.github.com/repos/MarkCalvert/sdp-platform-rules/contents/shipshape.yml?ref=${{ env.SDP_PLATFORM_RULES_VERSION }}" \
-            -o shipshape.yml
+      # - name: Get Cached SDP Platform Rules
+      #   id: cache-sdp-rules
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: shipshape.yml
+      #     key: sdp-platform-rules-${{ env.SDP_PLATFORM_RULES_VERSION }}
+      #     restore-keys: |
+      #       sdp-platform-rules-
+      # - name: Download SDP Platform Rules if not cached
+      #   if: steps.cache-sdp-rules.outputs.cache-hit != 'true'
+      #   run: |
+      #       curl -s -H "Authorization: token ${{ github.token }}" \
+      #       -H "Accept: application/vnd.github.raw" \
+      #       "https://api.github.com/repos/MarkCalvert/sdp-platform-rules/contents/shipshape.yml?ref=${{ env.SDP_PLATFORM_RULES_VERSION }}" \
+      #       -o shipshape.yml
       - name: Audit codebase
         shell: bash
         run: |
