--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -89,7 +89,7 @@ module:
   jwt_auth_issuer: 0
   key: 0
   key_value_field: 0
-  lagoon_logs: 1
+  lagoon_logs: 0
   link: 0
   link_field_autocomplete_filter: 0
   linkit: 0
@@ -211,4 +211,4 @@ module:
   tide: 1000
 theme:
   claro: 0
-profile: ti
+profile: test
