fix: Update Shipshape workflow to download SDP Platform Rules and remove error handling

--- a/.github/workflows/shipshape.yml
+++ b/.github/workflows/shipshape.yml
@@ -36,37 +36,30 @@ jobs:
           # Download shipshape binary
           curl -L "https://github.com/salsadigitalauorg/shipshape/releases/download/${{ env.SHIPSHAPE_VERSION }}/shipshape-$(uname -s)-$(uname -m)" -o /usr/local/bin/shipshape
           chmod +x /usr/local/bin/shipshape
-      # - name: Get Cached SDP Platform Rules
-      #   id: cache-sdp-rules
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: shipshape.yml
-      #     key: sdp-platform-rules-${{ env.SDP_PLATFORM_RULES_VERSION }}
-      #     restore-keys: |
-      #       sdp-platform-rules-
-      # - name: Download SDP Platform Rules if not cached
-      #   if: steps.cache-sdp-rules.outputs.cache-hit != 'true'
-      #   run: |
-      #       curl -s -H "Authorization: token ${{ github.token }}" \
-      #       -H "Accept: application/vnd.github.raw" \
-      #       "https://api.github.com/repos/MarkCalvert/sdp-platform-rules/contents/shipshape.yml?ref=${{ env.SDP_PLATFORM_RULES_VERSION }}" \
-      #       -o shipshape.yml
+      - name: Get Cached SDP Platform Rules
+        id: cache-sdp-rules
+        uses: actions/cache@v4
+        with:
+          path: shipshape.yml
+          key: sdp-platform-rules-${{ env.SDP_PLATFORM_RULES_VERSION }}
+          restore-keys: |
+            sdp-platform-rules-
+      - name: Download SDP Platform Rules if not cached
+        if: steps.cache-sdp-rules.outputs.cache-hit != 'true'
+        run: |
+          curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.raw" \
+          "https://api.github.com/repos/MarkCalvert/sdp-platform-rules/contents/shipshape.yml?ref=${{ env.SDP_PLATFORM_RULES_VERSION }}" \
+          -o shipshape.yml
       - name: Audit codebase
         shell: bash
         run: |
           # Run shipshape
-          set +e  # Don't exit on error
           shipshape run . -f shipshape.yml --error-code --output-format table --output-file shipshape-results.xml --output-file-format junit > shipshape-results.txt
-          EXIT_CODE=$?
-          
-          # If there are errors, show a warning
-          if [ $EXIT_CODE -ne 0 ]; then
-            echo "::warning::Shipshape audit found errors. Check the Junit Shipeshape Audit Report for details."
-          fi
       - name: Upload audit report
         uses: actions/upload-artifact@v4
         if: always()
-        with: 
+        with:
           path: shipshape-results.txt
       - name: Publish junit report
         uses: mikepenz/action-junit-report@v5
