--- a/.github/workflows/example-shipshape.yml
+++ b/.github/workflows/example-shipshape.yml
@@ -1,17 +1,13 @@
 name: Example Shipshape Usage
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
   workflow_call:
     inputs:
       run_shipshape_audit:
         description: Set to true to run shipshape audit.
         type: boolean
         required: false
-        default: true
+        default: false
       
 # Add permissions block with required permissions
 permissions:
